--- a/style.css
+++ b/style.css
@@ -16,7 +16,13 @@
     color: rgb(0, 94, 255);
     
 }
-
+.unselectable {
+    -moz-user-select: -moz-none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+}
 .extended {
     width: 635px;
 }
